# fqhnn_deepqmc

./: .gitignore  README.md  prompt.md  pyproject.toml
experiments/: 2025-11-21_run_n6_lambda_1over3_v1.py  run_n6_lambda_1over3.py  run_n6_lambda_1over3_v2.py
fqhnn_deepqmc/: __init__.py  ansatz.py  geometry.py  hamiltonian.py  jastrow.py  potential.py  psiformer.py  vmc.py  vmc_kfac.py
scripts/: eval_checkpoint.py  precompute_disk_potential.py
